tests/fixtures/positive/naming/MatchingDeclarationName.kt
package com.example.naming

// File is named MatchingDeclarationName.kt but contains class Mismatch
class Mismatch {
    fun doSomething() {}
}
