tests/fixtures/negative/naming/FunctionNaming.kt
package com.example.naming

fun goodFunction() {
    println("good")
}

fun anotherGoodFunction() {
    println("also good")
}
